@@ -1,3 +1,9 @@
+serd (1.0.0) unstable;
+
+  * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
+
+ -- David Robillard <d@drobilla.net>  Sat, 19 Jan 2019 13:31:12 +0100
+
 serd (0.30.1) unstable;
 
   * Fix GCC 4 build
